# mikebom

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md
.github/: pull_request_template.md
.github/workflows/: auto-tag-release.yml  ci.yml  perf.yml  realistic-projects.yml  release.yml
.specify/memory/: constitution.md
docs/: design-notes.md  ecosystems.md  index.md  releases.md
docs/architecture/: attestations.md  overview.md  resolvers.md
docs/reference/: binary-identity.md  component-tiers.md  conformance-harness-guide.md  cross-tier-binding.md  identifiers.md  reading-a-mikebom-sbom.md  sbom-format-mapping.md  sbom-scopes.md  sbom-types.md
docs/user-guide/: cli-reference.md  configuration.md  installation.md  quickstart.md  split-manifest.md
mikebom-cli/: Cargo.toml
mikebom-cli/src/: lib.rs  main.rs
mikebom-cli/tests/: cargo_optional_feature_resolve.rs  dart_design_tier.rs  dart_edge_cases.rs  elixir_tier_fallbacks.rs  erlang_edge_cases.rs  file_tier_orphan_emit.rs  go_transitive_edges.rs  helm_reader.rs  ipk_license_splitter_m202.rs  oci_registry_smoke.rs  scala_edge_cases.rs  scan_bazel.rs  scan_binary.rs  scan_bun_lock.rs  scan_cargo.rs  scan_cmake.rs  scan_cmake_findpackage_negative.rs  scan_cmake_vendored.rs  scan_gem.rs  scan_go.rs  scan_npm.rs  warm_go_cache.rs  (+8 more)
mikebom-cli/tests/fixtures/bazel/: MODULE.bazel  WORKSPACE.bazel
mikebom-cli/tests/fixtures/cmake/: CMakeLists.txt
mikebom-cli/tests/fixtures/cmake/cmake/: third_party.cmake
mikebom-cli/tests/fixtures/cmake/src/: CMakeLists.txt
mikebom-cli/tests/fixtures/cmake_findpackage_only/: CMakeLists.txt
scripts/: ebpf-integration-test.sh  install-spdx3-validate.sh  regen-goldens.sh  verify-docs-currency.sh
tests/: fingerprints.rev
(+699 files in other folders)
