load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")
load("@bazel_tools//tools/build_defs/repo:git.bzl", "git_repository")

http_archive(
    name = "rules_python",
    urls = ["https://github.com/bazelbuild/rules_python/archive/0.30.0.tar.gz"],
    sha256 = "abc1234567890abcdef1234567890abcdef1234567890abcdef1234567890abc",
)

git_repository(
    name = "rules_foo",
    remote = "https://github.com/foo/rules_foo.git",
    commit = "deadbeef0123456789abcdef0123456789abcdef",
)
